<resources>
    <string name="app_name">IROM</string>
    <string name="emailPrompt">Email*</string>
    <string name="enter_email_hint">enter email</string>
    <string name="password_label">Password*</string>
    <string name="enter_password_hint">enter password</string>
    <string name="re_enter_password_label">Re-enter Password*</string>
    <string name="re_enter_password_hint">re-enter password</string>
    <string name="first_name_label">First Name: </string>
    <string name="first_name_hint">enter first name</string>
    <string name="last_name_label">Last Name: </string>
    <string name="enter_last_name_hint">enter last name</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="have_an_account_sign_in_button">Have an account? Sign in!</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="title_activity_cloud_vision_test">CloudVisionTestActivity</string>
    <string name="picture_of_dog_looking_at_camera">picture of dog looking at camera</string>
    <string name="test_image">Test Image</string>
    <string name="load_image">Load Image</string>
    <string name="capture_image">Open Camera</string>
    <string name="google_cloud_vision_response">Google Cloud Vision Response:</string>
    <string name="cloud_vision_test">Cloud Vision Test</string>
    <string name="log_out">Log Out</string>
    <string name="not_a_first_name">NOT a first name</string>
    <string name="you_logged_in">You logged in!!</string>
    <string name="cartoon_girl_shocked_at_laptop">cartoon girl shocked at laptop</string>
    <string name="current_user_email">current user email:</string>
    <string name="log_out_button">log out button</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="currency_spinner_prompt">choose a currency</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="loading_text">Loading...</string>
    <string name="default_text">Default Text</string>
    <string name="no_request_sent">No request sent...</string>
    <string name="first_name">first name:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up!</string>
    <string name="forgot_password">Forgot password?</string>

</resources>
