<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignUpActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/emailPrompt"
        android:id="@+id/email_label"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="start" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email_edit_text"
        android:layout_below="@+id/email_label"
        android:layout_alignParentStart="true"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/enter_email_hint"
        android:singleLine="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password_label"
        android:id="@+id/password_label"
        android:layout_below="@+id/email_edit_text"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_edit_text"
        android:layout_below="@+id/password_label"
        android:layout_alignParentStart="true"
        android:paddingEnd="10dp"
        android:password="true"
        android:paddingStart="10dp"
        android:singleLine="true"
        android:hint="@string/enter_password_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/re_enter_password_label"
        android:id="@+id/reenter_password_label"
        android:layout_below="@+id/password_edit_text"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_2_edit_text"
        android:layout_below="@+id/reenter_password_label"
        android:layout_alignParentStart="true"
        android:hint="@string/re_enter_password_hint"
        android:singleLine="true"
        android:paddingEnd="10dp"
        android:paddingStart="10dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/first_name_label"
        android:id="@+id/first_name_label"
        android:layout_below="@+id/password_2_edit_text"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/first_name_edit_text"
        android:layout_below="@+id/first_name_label"
        android:layout_alignParentStart="true"
        android:singleLine="true"
        android:hint="@string/first_name_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/last_name_label"
        android:id="@+id/last_name_label"
        android:layout_below="@+id/first_name_edit_text"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/last_name_edit_text"
        android:layout_below="@+id/last_name_label"
        android:layout_alignParentStart="true"
        android:hint="@string/enter_last_name_hint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button"
        android:id="@+id/sign_up_button"
        android:layout_below="@+id/last_name_edit_text"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_an_account_sign_in_button"
        android:id="@+id/sign_in_button"
        android:layout_below="@+id/sign_up_button"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
