<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sjsu.se195.irom.CloudVisionTestActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="300dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/vision_test"
                android:id="@+id/imageView"
                android:adjustViewBounds="true"
                android:contentDescription="@string/picture_of_dog_looking_at_camera"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />
            <Button
                android:text="@string/load_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                android:layout_below="@+id/imageView"
                android:layout_alignParentStart="true" />

            <Button
                android:text="@string/capture_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button3"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />

            <Button
                android:text="@string/test_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/send_request_button"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:text="@string/google_cloud_vision_response"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/resultsLabel"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/resultsReplace"
                android:text="Default Text"
                android:textColor="#000000"
                android:visibility="visible" />

            <Button
                android:text="@string/test_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/test"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
