<?xml version="1.0" encoding="utf-8"?>

<!-- User Login Page -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sjsu.se195.irom.SignInActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.sjsu.se195.irom.SignInActivity">

         <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="18dp"
            app:srcCompat="@drawable/irom_logo_placeholder_360x180_black"
            android:layout_above="@+id/signin_button"
            android:layout_alignParentStart="true" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingTop="16dp"
            android:paddingBottom="8dp">
            <EditText
                android:id="@+id/signin_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:selectAllOnFocus="true"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:gravity="start"
            android:labelFor="@+id/signin_password_text">
            <EditText
                android:id="@+id/signin_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:selectAllOnFocus="true"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:id="@+id/signin_button"
            android:textColor="@color/white"
            android:background="@drawable/green_button_shape" />

        <TextView
            android:id="@+id/forgot_pw_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="8dp"
            android:paddingTop="18dp"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textSize="18sp" />
        <View
            style="@style/GreenDivider"/>

        <TextView
            android:id="@+id/sign_up_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="16dp"
            android:paddingTop="8dp"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>

</ScrollView>
