<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sjsu.se195.irom.signup.SignUpActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/email_label"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:gravity="start">
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/email_edit_text"
                android:layout_below="@+id/email_label"
                android:layout_alignParentStart="true"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:hint="@string/email"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/password"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:id="@+id/password_label">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password_edit_text"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:hint="@string/password"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/first_name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium">
            <EditText
                android:id="@+id/first_name_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/first_name_hint"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingBottom="8dp"
                android:paddingTop="8dp" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:id="@+id/last_name_label">
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/last_name_edit_text"
                android:layout_below="@+id/last_name_label"
                android:layout_alignParentStart="true"
                android:hint="@string/last_name_hint" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_button"
            android:id="@+id/sign_up_button"
            android:textColor="@color/white"
            android:background="@drawable/green_button_shape"/>
        <TextView
            android:id="@+id/sign_in_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:text="@string/have_an_account_sign_in_button"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>

</ScrollView>